# commander

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
docs/: Doxyfile  api-mapping.md  build.py  dependency-analysis.md  divergences.md  port-checklist.md  requirements.txt  research.md  test-plan.md
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: argument.rst  command.rst  entry-points.rst  errors.rst  help.rst  index.rst  option.rst
docs/sphinx/examples/: greet.rst  index.rst  todo.rst
docs/sphinx/getting-started/: core-concepts.rst  installation.rst  quickstart.rst
docs/sphinx/guides/: executable-subcommand.rst  index.rst  override-exit.rst  parse-numeric-option.rst  required-option.rst  variadic-and-repeated.rst
docs/sphinx/tutorials/: async-actions.rst  custom-help.rst  git-style-cli.rst  index.rst
examples/: greet.cpp  todo.cpp
include/polycpp/commander/: argument.hpp  command.hpp  commander.hpp  error.hpp  help.hpp  option.hpp  suggest_similar.hpp
include/polycpp/commander/detail/: aggregator.hpp  argument.hpp  command.hpp  command_impl.hpp  commander.hpp  error.hpp  help.hpp  option.hpp  suggest_similar.hpp
src/: commander.cpp
tests/: test_argument.cpp  test_command.cpp  test_error.cpp  test_executable.cpp  test_help.cpp  test_integration.cpp  test_option.cpp  test_suggest_similar.cpp
tests/fixtures/: echo_argv.cpp  exit_with_code.cpp  signal_writer.cpp
